<?xml version="1.0" encoding="utf-8"?>
<!-- Name: Alay Lad -->
<!-- Student Number: N00676600-->
<!-- Name: Assignment 1 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="alay.lad.Order"
    tools:showIn="@layout/activity_order"
    android:orientation="vertical"
    android:background="@drawable/bk">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/Billing_Information"

        android:id="@+id/textView4"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:background="@android:drawable/bottom_bar"
        android:gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">




        <!--  Fist Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/FName"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>



        <!--  Last Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_Lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/LName"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>




        <!--  Address Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/Address"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>


<TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!-- city Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/city"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>

    <!-- State Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/fild">
        <EditText android:id="@+id/input_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/state"
            android:textColorLink="@android:color/holo_red_dark" />
    </android.support.design.widget.TextInputLayout>







</TableRow>

        <!--  country Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/Country"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>



        <!--  zip Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/zip"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>


        <!--  Phone Number Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/phone"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>


        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Email"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>

        <!--  Credit Card Holder  Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_card_holder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/Card_holder"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>


        <!--  Credit card drop -->

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="21dp"
            android:entries="@array/Credit"
            android:background="@drawable/dropbb"
            android:clipToPadding="false"
            android:gravity="center_vertical|center_horizontal|center" />




        <!--  Card NumberLabel -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/Card_number"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>


        <!--  Expiration date Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/fild">
            <EditText android:id="@+id/input_expiration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/exp"
                android:textColorLink="@android:color/holo_red_dark" />
        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:text="@string/back"
                    android:layout_height="60dp"
                    android:id="@+id/Back"
                    android:background="@drawable/back"
                    android:onClick="finalSelection"
                    android:layout_width="180dp" />
                <Button
                    android:text="@string/next"
                    android:layout_height="60dp"
                    android:id="@+id/button4"
                    android:background="@drawable/next"
                    android:onClick="finalSelection" />
            </TableRow>
            </LinearLayout>

    </ScrollView>

    </LinearLayout>






