<?xml version="1.0" encoding="utf-8"?>
<!-- Name: Alay Lad -->
<!-- Student Number: N00676600-->
<!-- Name: Assignment 1 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_thank_you"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="alay.lad.ThankYou"
    tools:showIn="@layout/activity_thank_you"
    android:background="@drawable/bk">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/orderConf"

        android:id="@+id/textView4"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:background="@android:drawable/bottom_bar"
        android:gravity="center_vertical|center_horizontal"
        android:layout_height="40dp" />

    <TextView
        android:text="$ 20.99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView22"
        android:layout_toEndOf="@+id/textView22"
        android:layout_marginStart="22dp"
        android:id="@+id/textView25"
        android:textSize="24sp"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:id="@+id/textView5"
        android:text="@string/thankyou"
        android:textSize="25sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="normal|bold"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:text="@string/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/textView22"
        android:textSize="24sp"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/textView24"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold" />

    <TextView
        android:text="32146836"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:textSize="24sp"
        android:layout_above="@+id/textView25"
        android:layout_alignStart="@+id/textView25"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/orderNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/textView23"
        android:layout_alignBottom="@+id/textView23"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/haveaniceday"
        android:id="@+id/imageView8"
        android:layout_below="@+id/textView25"
        android:layout_alignParentStart="true" />
</RelativeLayout>
